now with pages!
mainwindow heeft nu 2 knoppen, een close knop en een settings knop.
als je op de settings knop drukt kom je in het settings menu. deze heeft
een close knop om terug te komen in de mainpage.
de close knop op de mainpage brengt je naar een confirm page, die vraagt
of je wilt stoppen. yes: stoppen. no:terug naar mainpage

ook een text documentje: sites.txt met daarin een onbekende site met wat
handige tips voor qml programmeren en een site waar iconen te vinden
zijn

--- a/Qt-game/qml.qrc
+++ b/Qt-game/qml.qrc
@@ -1,5 +1,10 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>images/close.png</file>
+        <file>settings.qml</file>
+        <file>images/settings.png</file>
+        <file>mainpage.qml</file>
+        <file>confirm.qml</file>
     </qresource>
 </RCC>
